syntax = "proto3";
package rarimo.rarimocore.rarimocore;

option go_package = "github.com/rarimo/rarimo-core/x/rarimocore/types";

import "tokenmanager/item.proto";
import "gogoproto/gogo.proto";

message IdentityGISTTransfer {
  // Hex 0x
  string contract = 1;
  string chain = 2;
  // Hex 0x
  string GISTHash = 3;
  // Dec
  string GISTCreatedAtTimestamp = 5;
  string GISTCreatedAtBlock = 6;
  // HEX 0x
  string replacedGISTHash = 7;
}

